re PR target/18551 (wrong asm output for -mcall-prologues with g++)

PR target/18551
	* config/avr/avr.c (avr_output_function_prologue): Do not use
	current_function_name() in a label, use a local label instead.

From-SVN: r96766